[metadata]
name = health-class-homepage
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = 초등학교 5학년 보건수업 홈페이지
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/health-class-homepage
project_urls =
    Bug Tracker = https://github.com/yourusername/health-class-homepage/issues
    Documentation = https://github.com/yourusername/health-class-homepage#readme
    Source Code = https://github.com/yourusername/health-class-homepage
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Education
    Natural Language :: Korean

[options]
python_requires = >=3.8
install_requires =
    Flask==2.3.3
    pyrebase4==2.0.1
    python-dotenv==1.0.0
    Werkzeug==2.3.7
